edit fail index di branch order-list

--- a/index.html
+++ b/index.html
@@ -3,9 +3,20 @@
 <head>
 <title>Page Title</title>
 </head>
-<body>
+<body style="background-color: skyblue;">
 <h1>This is a Heading</h1>
-  <h1>Selamat Datang ke no. 79 Lorong Delima 4b, Bandar Parklands</h1>
 <p>This is a paragraph.</p>
+<p style="text-align: center;">BIODATA SAYA</p>
+<b>Nama saya Ezzah.</b>
+<p style="font-family: courier;">Nama penuh: Ezzah Afiqah Binti
+Amir</p>
+<p style="color:blue;">Tarikh lahir: 09/09/1999</p>
+<b>Makanan Kegemaran</b>
+<ol>
+<li>Nasi Goreng</li>
+<li>Ayam Goreng</li>
+<li>Kuey Teow Sup</li>
+</ol>
 </body>
 </html>
+
