--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <h1>This is a Heading</h1>
 <p>This is a paragraph.</p>
 <p style="text-align: center;">BIODATA SAYA</p>
-<b>Nama saya Ezzah.</b>
+<b>Nama saya Muhammad Khuzaif Amsyar.</b>
 <p style="font-family: courier;">Nama penuh: Ezzah Afiqah Binti
 Amir</p>
 <p style="color:blue;">Tarikh lahir: 09/09/1999</p>
