edit fail index klai 1 di branch font-family

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <p>This is a paragraph.</p>
 <p style="text-align: center;">BIODATA SAYA</p>
 <b>Nama saya Muhammad Khuzaif Amsyar.</b>
-<p style="font-family: courier;">Nama penuh: Ezzah Afiqah Binti
-Amir</p>
+<p style="font-family: courier;">Nama penuh: Muhammad Khuzaif Amsyar bin
+Mohd Hazimin</p>
 </body>
 </html>
